feat: Implementing the DataType and ColumnConstraint visitors.
- The methods created are: visitDataType and visitColumnConstraint. Without them, ANTLR fails when trying to call them because they were not implemented.

- I also refactored the tests because of the unimplemented types; this was causing several tests to fail.